--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,21 @@
 <package>
   <name>PetitParser</name>
+  <namespace>PP</namespace>
 
   <filein>PetitParser.st</filein>
 
   <test>
-    <sunit>PPComposedTest</sunit>
-    <sunit>PPExtensionTest</sunit>
-    <sunit>PPMappingTest</sunit>
-    <sunit>PPParserTest</sunit>
-    <sunit>PPPredicateTest</sunit>
-    <sunit>PPScriptingTest</sunit>
-    <sunit>PPTokenTest</sunit>
-    <sunit>PPCompositeParserTest</sunit>
-    <sunit>PPArithmeticParserTest</sunit>
-    <sunit>PPExpressionParserTest</sunit>
-    <sunit>PPLambdaParserTest</sunit>
+    <sunit>PP.PPComposedTest</sunit>
+    <sunit>PP.PPExtensionTest</sunit>
+    <sunit>PP.PPMappingTest</sunit>
+    <sunit>PP.PPParserTest</sunit>
+    <sunit>PP.PPPredicateTest</sunit>
+    <sunit>PP.PPScriptingTest</sunit>
+    <sunit>PP.PPTokenTest</sunit>
+    <sunit>PP.PPCompositeParserTest</sunit>
+    <sunit>PP.PPArithmeticParserTest</sunit>
+    <sunit>PP.PPExpressionParserTest</sunit>
+    <sunit>PP.PPLambdaParserTest</sunit>
     <filein>PetitParserTests.st</filein>
   </test>
 
